[package]
name = "rust-thread-pool"
version = "0.1.0"
authors = ["duyquang6 <nguyenduyquang06@gmail.com>"]
edition = "2018"

[lib]
name = "rust_thread_pool"
path = "src/lib.rs"

[[bin]]
name = "rust_thread_pool"
path = "src/bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
